feat: updated requirements

--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -52,9 +52,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-25 23:41:34.561287: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-25 23:42:15.326955: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-25 23:41:37.319585: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-25 23:42:18.309730: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -125,7 +125,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.024088382720947266,
+       "elapsed": 0.02416205406188965,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -139,7 +139,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adcfcbd0c34e4f4dab16088f2561a0b9",
+       "model_id": "79a0db1a301243a4a6ca85d67e47789b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +156,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.07108306884765625,
+       "elapsed": 0.06772518157958984,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -170,7 +170,46 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36eacd370d2f4051928a04b2915ad29a",
+       "model_id": "671d2e157e9a47d3b5ac4ff8835aeb0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/235 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/helikarlab/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  fig, axes = mplt.subplots(n_plots, 1, sharex = True)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.038587331771850586,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 14,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 235,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "351f15a232bf4249b61eb30ea2a2e487",
        "version_major": 2,
        "version_minor": 0
       },
