feat: add conditional wcgan

--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -52,9 +52,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-25 23:42:15.326955: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-26 12:46:11.262839: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-25 23:42:18.309730: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-26 12:46:14.193813: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -125,11 +125,11 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.02416205406188965,
+       "elapsed": 0.027887344360351562,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 14,
+       "nrows": 13,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -139,7 +139,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79a0db1a301243a4a6ca85d67e47789b",
+       "model_id": "46bbeb75cef64692be81a75e03c67cf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,11 +156,11 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.06772518157958984,
+       "elapsed": 0.06701111793518066,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 14,
+       "nrows": 13,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -170,7 +170,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "671d2e157e9a47d3b5ac4ff8835aeb0e",
+       "model_id": "2d339602ac864f38966a452b654d0d00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,47 +188,16 @@
       "/home/helikarlab/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
       "  fig, axes = mplt.subplots(n_plots, 1, sharex = True)\n"
      ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.038587331771850586,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 14,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 235,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "351f15a232bf4249b61eb30ea2a2e487",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/235 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "from deeply.model.gan import save_img_samples\n",
     "\n",
-    "samples = gan.get_random_latent_vector(n_samples = batch_size)\n",
+    "samples = gan.get_random_latent_vector(shape = (batch_size, None))\n",
     "\n",
     "for e in trange(config[\"epochs\"]):\n",
     "    for b in tqdm(batch):\n",
-    "        history = gan.fit(b, checkpoint_path = \"gan.h5d5\")\n",
+    "        history = gan.fit(b, batch_size = batch_size, checkpoint_path = \"gan.h5d5\")\n",
     "    save_img_samples(gan, samples = samples, to_file = \"gan.png\")"
    ]
   }
