--- a/docs/source/models/conditional-dcgan.ipynb
+++ b/docs/source/models/conditional-dcgan.ipynb
@@ -42,20 +42,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6d0e7c2d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-26 12:53:23.573101: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-26 12:53:28.515761: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2022-10-11 19:09:06.997431: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-10-11 19:09:06.997531: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -88,10 +89,7 @@
    "execution_count": 2,
    "id": "9f1ae69c",
    "metadata": {
-    "scrolled": false,
-    "vscode": {
-     "languageId": "python"
-    }
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -125,11 +123,11 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.033377885818481445,
+       "elapsed": 0.01322317123413086,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 13,
+       "nrows": 21,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -139,7 +137,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7012e63a2c446948f884393e4304ff9",
+       "model_id": "c3e6a800c8bf487e8e90e2d8095911b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,16 +149,23 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-11 19:09:10.437545: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
      "data": {
       "application/json": {
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.10727143287658691,
+       "elapsed": 0.034210920333862305,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 13,
+       "nrows": 21,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -170,7 +175,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84e891ce995243bbb79b524a7581e142",
+       "model_id": "d31e0aebe021481ea6fce714cb7537e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +190,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/helikarlab/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "2022-10-11 19:09:11.301982: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "/Users/achillesrasquinha/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  fig, axes = mplt.subplots(n_plots, 1, sharex = True)\n"
      ]
     }
@@ -218,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
