--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -42,11 +42,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6d0e7c2d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -86,10 +82,7 @@
    "execution_count": 2,
    "id": "9f1ae69c",
    "metadata": {
-    "scrolled": false,
-    "vscode": {
-     "languageId": "python"
-    }
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -113,10 +106,7 @@
    "execution_count": null,
    "id": "d6310d39",
    "metadata": {
-    "scrolled": false,
-    "vscode": {
-     "languageId": "python"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -191,14 +181,14 @@
     }
    ],
    "source": [
-    "from deeply.model.gan import save_img_samples\n",
+    "# from deeply.model.gan import save_img_samples\n",
     "\n",
-    "samples = gan.get_random_latent_vector(shape = (batch_size, None))\n",
+    "# samples = gan.get_random_latent_vector(shape = (batch_size, None))\n",
     "\n",
-    "for e in trange(config[\"epochs\"]):\n",
-    "    for b in tqdm(batch):\n",
-    "        history = gan.fit(b, batch_size = batch_size, checkpoint_path = \"gan.h5d5\")\n",
-    "    save_img_samples(gan, samples = samples, to_file = \"gan.png\")"
+    "# for e in trange(config[\"epochs\"]):\n",
+    "#     for b in tqdm(batch):\n",
+    "#         history = gan.fit(b, batch_size = batch_size, checkpoint_path = \"gan.h5d5\")\n",
+    "#     save_img_samples(gan, samples = samples, to_file = \"gan.png\")"
    ]
   }
  ],
