--- a/docs/source/models/convolutional-vae.ipynb
+++ b/docs/source/models/convolutional-vae.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "import deeply\n",
     "\n",
-    "vae = deeply.hub(\"convolutional-variational-autoencoder\", x = 28)"
+    "vae = deeply.hub(\"cvae\", x = 28)"
    ]
   },
   {
@@ -77,32 +77,32 @@
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import deeply.datasets as dd\n",
+    "# import tensorflow as tf\n",
+    "# import deeply.datasets as dd\n",
     "\n",
-    "batch_size = 128\n",
-    "epochs     = 30\n",
+    "# batch_size = 128\n",
+    "# epochs     = 30\n",
     "\n",
-    "def normalize(image, label):\n",
-    "    return tf.cast(image, tf.float32) / 255\n",
+    "# def normalize(image, label):\n",
+    "#     return tf.cast(image, tf.float32) / 255\n",
     "\n",
-    "def preprocess_ds(ds):\n",
-    "    return ds\\\n",
-    "        .map(normalize)\\\n",
-    "        .cache()\\\n",
-    "        .shuffle(dd.length(ds))\\\n",
-    "        .batch(batch_size)\\\n",
+    "# def preprocess_ds(ds):\n",
+    "#     return ds\\\n",
+    "#         .map(normalize)\\\n",
+    "#         .cache()\\\n",
+    "#         .shuffle(dd.length(ds))\\\n",
+    "#         .batch(batch_size)\\\n",
     "\n",
-    "mnist = dd.load(\"mnist\", as_supervised = True)\n",
-    "train = preprocess_ds(mnist[\"train\"])\n",
+    "# mnist = dd.load(\"mnist\", as_supervised = True)\n",
+    "# train = preprocess_ds(mnist[\"train\"])\n",
     "\n",
-    "history = vae.fit(train, epochs = epochs, batch_size = batch_size, monitor = \"bernoulli_loss\")"
+    "# history = vae.fit(train, epochs = epochs, batch_size = batch_size, monitor = \"bernoulli_loss\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +116,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
